--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -6,7 +6,7 @@ on:
     branches: [master]
 jobs:
   build:
-    runs_on: ubuntu_latest
+    runs-on: ubuntu_latest
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js Version 16
