--- a/server/package.json
+++ b/server/package.json
@@ -23,7 +23,8 @@
     "morgan": "^1.10.0",
     "pm2": "^5.2.0",
     "sample_nasa_project": "file:..",
-    "superagent": "^8.0.0"
+    "superagent": "^8.0.0",
+    "uuid": "^7.0.3"
   },
   "devDependencies": {
     "jest": "^29.1.2",
